@@ -53,6 +53,12 @@
 			<trans-unit id="missingPropertiesForXmlData" xml:space="preserve">
 				<source>XML-type data must have at least one of the following properties: "field", "value", "atribute" or "xpath".</source>
 			</trans-unit>
+			<trans-unit id="conflictingPropertiesForArrayData" xml:space="preserve">
+				<source>Do not set both the "value" and the "field" properties as they are conflicting. The "value" property takes precedence.</source>
+			</trans-unit>
+			<trans-unit id="conflictingPropertiesForXmlData" xml:space="preserve">
+				<source>Do not set both the "value" property and one of "field", "atribute" or "xpath", as they are conflicting. The "value" property takes precedence.</source>
+			</trans-unit>
 			<trans-unit id="renamedProperty" xml:space="preserve">
 				<source>Property "%1$s" was renamed to "%2$s". Please update your configuration.</source>
 			</trans-unit>
