@@ -1,6 +1,7 @@
 2016-11-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Fixed display of saved search in Data Import module, resolves #78721
+	* Improved column configuration validator with additional warnings, resolves #78723
 
 2016-11-15 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
